--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
     <p>Hello World!</p>
     <button class="payload" id="payload_1">Hekate!</button>
     <button class="payload" id="payload_2">Argon!</button>
+    <button class="payload" id="payload_3">Argon!</button>
     <br><button id="installPyReq">Install Python Requirements</button>
   </body>
 </html>
