--- a/main.html
+++ b/main.html
@@ -7,9 +7,9 @@
   </head>
   <body>
     <p>Hello World!</p>
-    <button class="payload" id="payload_1">Hekate!</button>
-    <button class="payload" id="payload_2">Argon!</button>
-    <button class="payload" id="payload_3">Argon!</button>
+    <button class="payload" id="payload_1">Hak it!</button>
+    <button class="payload" id="payload_2">U Argon!</button>
+    <button class="payload" id="payload_3">Foozi Jelly!</button>
     <br><button id="installPyReq">Install Python Requirements</button>
   </body>
 </html>
