--- a/src/main.html
+++ b/src/main.html
@@ -10,11 +10,13 @@
 <body>
   <p>Hello World!</p>
   <select id="payload_select">
+    <option>Select a Payload</option>
     <option id="pl1" value="pl1">Hak it!</option>
     <option id="pl2" value="pl2">Foozi Jelly!</option>
-    <option id="pl3" value="pl3">U Argon!</option>
+    <option id="pl3" value="pl3">PikLok</option>
   </select>
-  <button id="payload_inject">Inject!</button>
+  <button id="payload_inject">Inject!</button><br>
+  <button id="payload_config">Payload Config</button>
   <div id="rcm_status"> RCM</div>
 </body>
 
