Fixed some issues
Also added a check to see if the specified payload exists, if not, the 'inject' button will be disabled for that plugin

--- a/src/main.html
+++ b/src/main.html
@@ -10,10 +10,10 @@
 <body>
   <p>Hello World!</p>
   <select id="payload_select">
-    <option>Select a Payload</option>
-    <option id="pl1" value="pl1">Hak it!</option>
-    <option id="pl2" value="pl2">Foozi Jelly!</option>
-    <option id="pl3" value="pl3">PikLok</option>
+    <option id="pl1" value="pl1">Hak it</option>
+    <option id="pl2" value="pl2">Foozi Jelly</option>
+    <option id="pl3" value="pl3">Dad Isgon</option>
+    <option id="pl4" value="pl4">PikLok</option>
   </select>
   <button id="payload_inject">Inject!</button><br>
   <button id="payload_config">Payload Config</button>
