Added smooth page transitions
jQuery in Electron? L + ratio + cope + no bitches

--- a/src/alt.html
+++ b/src/alt.html
@@ -9,7 +9,7 @@
 
 <body>
   <div id="main">
-    <p>Hello World! MAIN</p>
+    <p>Hello World! ALT</p>
     <select id="payload_select">
       <option id="pl1" value="pl1">Loading</option>
       <option id="pl2" value="pl2">Loading</option>
@@ -19,7 +19,7 @@
     <button id="payload_inject">Inject!</button><br>
     <button id="payload_config">Payload Config</button>
     <div id="rcm_status"> RCM</div>
-    <a id="tab" href="./alt.html">ALT</a>
+    <a id="tab" href="./main.html">MAIN</a>
   </div>
   <script src="./jquery-3.6.0.min.js"></script>
   <script src="./jquery.smoothState.min.js"></script>
