Cleaned stuff up

--- a/src/alt.html
+++ b/src/alt.html
@@ -8,8 +8,10 @@
 </head>
 
 <body>
+  <div id="nav">
+    <p>Hello World!</p><br>
+  </div>
   <div id="main">
-    <p>Hello World! ALT</p>
     <select id="payload_select">
       <option id="pl1" value="pl1">Loading</option>
       <option id="pl2" value="pl2">Loading</option>
@@ -17,9 +19,9 @@
       <option id="pl4" value="pl4">Loading</option>
     </select>
     <button id="payload_inject">Inject!</button><br>
-    <button id="payload_config">Payload Config</button>
     <div id="rcm_status"> RCM</div>
-    <a id="tab" href="./main.html">MAIN</a>
+    <button id="payload_config">Payload Config</button><br>
+    <a id="tab" href="./main.html">Go to MAIN</a>
   </div>
   <script src="./jquery-3.6.0.min.js"></script>
   <script src="./jquery.smoothState.min.js"></script>
