Working on the nav bar

--- a/src/alt.html
+++ b/src/alt.html
@@ -8,9 +8,15 @@
 </head>
 
 <body>
-  <div id="nav">
-    <p>Hello World!</p><br>
-  </div>
+  <nav>
+    <ul>
+      <li id="injectNav"><a>Injector</a></li>
+      <li id="patchNav"><a>Patches</a></li>
+      <li id="logoNav"><a>A</a></li>
+      <li id="configNav"><a>Config</a></li>
+      <li id="settingsNav"><a>Settings</a></li>
+    </ul>
+  </nav>
   <div id="main">
     <select id="payload_select">
       <option id="pl1" value="pl1">Loading</option>
