Made version info better

--- a/src/configPage.html
+++ b/src/configPage.html
@@ -25,6 +25,7 @@
       <li class="selectedTab" id="configNav tab"><a id="tab">Config</a></li>
       <li id="settingsNav tab"><a href="./settingsPage.html">Settings</a></li>
     </ul>
+    <span id="versionInfo">[version info]</span>
   </div>
   <div id="main">
     <div id="content">
