--- a/src/settingsPage.html
+++ b/src/settingsPage.html
@@ -25,6 +25,7 @@
       <li id="configNav tab"><a id="tab" href="./configPage.html">Config</a></li>
       <li class="selectedTab" id="settingsNav tab"><a>Settings</a></li>
     </ul>
+    <span id="versionInfo">[version info]</span>
   </div>
   <div id="main">
     <div id="content">
