--- a/src/mainPage.html
+++ b/src/mainPage.html
@@ -25,6 +25,7 @@
       <li id="configNav tab"><a id="tab" href="./configPage.html">Config</a></li>
       <li id="settingsNav tab"><a href="./settingsPage.html">Settings</a></li>
     </ul>
+    <span id="versionInfo">[version info]</span>
   </div>
   <div id="main">
     <div id="content">
