--- a/src/frontend/settingsPage.html
+++ b/src/frontend/settingsPage.html
@@ -3,15 +3,15 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="./style.css">
-  <link rel="stylesheet" href="./transitions.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/transitions.css">
 </head>
 
 <body>
   <div id="nav">
     <ul>
       <div id="logoNav">
-        <img width="50px" src="assets/iconLogo.png" />
+        <img width="50px" draggable="false" src="./assets/iconLogo.png" />
       </div>
       <li></li>
       <div id="rcm_status">
@@ -25,17 +25,17 @@
       <li id="configNav tab"><a id="tab" href="./configPage.html">Config</a></li>
       <li class="selectedTab" id="settingsNav tab"><a>Settings</a></li>
     </ul>
-    <span id="versionInfo">[version info]</span>
+    <span id="versionInfo"></span>
   </div>
   <div id="main">
     <div id="content">
       <p>Placeholder</p>
     </div>
   </div>
-  <script src="./jquery-3.6.0.min.js"></script>
-  <script src="./jquery.smoothState.min.js"></script>
-  <script src="./script.js"></script>
-  <script src="./mainScript.js"></script>
+  <script src="./js/jquery-3.6.0.min.js"></script>
+  <script src="./js/jquery.smoothState.min.js"></script>
+  <script src="./js/script.js"></script>
+  <script src="./js/mainScript.js"></script>
 </body>
 
 </html>
