--- a/src/frontend/toolsPage.html
+++ b/src/frontend/toolsPage.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <div id="nav">
+  <div id="nav" class="noClick">
     <ul>
       <div id="logoNav">
         <img width="50px" draggable="false" src="./assets/iconLogo.png" />
