--- a/src/frontend/configPage.html
+++ b/src/frontend/configPage.html
@@ -11,7 +11,7 @@
   <div id="nav" class="noClick">
     <ul>
       <div id="logoNav">
-        <img width="50px" draggable="false" src="./assets/iconLogo.png" />
+        <img id="logoNavImg" width="50px" draggable="false" src="./assets/iconLogo-dark.png" />
       </div>
       <li></li>
       <div id="rcm_status">
@@ -29,7 +29,7 @@
   </div>
   <div id="main">
     <div id="content">
-      <p>Placeholder</p>
+      <button id="payload_config">Payload Config</button>
     </div>
   </div>
   <script src="./js/jquery-3.6.0.min.js"></script>
