--- a/src/frontend/toolsPage.html
+++ b/src/frontend/toolsPage.html
@@ -11,7 +11,7 @@
   <div id="nav" class="noClick">
     <ul>
       <div id="logoNav">
-        <img width="50px" draggable="false" src="./assets/iconLogo.png" />
+        <img id="logoNavImg" width="50px" draggable="false" src="./assets/iconLogo-dark.png" />
       </div>
       <li></li>
       <div id="rcm_status">
